ActivityMonitor, Text.diff